templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: samplemeshapp-route
  namespace: istio-system
spec:
  host: samplemeshapp.apps.cluster-z9nwc.z9nwc.sandbox439.opentlc.com
  to:
    kind: Service
    name:  istio-ingressgateway
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
