templates/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: samplemeshapp
spec:
  hosts:
    - '*'
  gateways:
    - mesh-gateway
  http:
    - match:
        - uri:
            exact: /samplemeshapp
        - uri:
            exact: /login
        - uri:
            exact: /logout
      route:
        - destination:
            host: samplemeshapp
            port:
              number: 80
